[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "crabparser"
version = "0.1.0"
description = "A fast text parser library with Rust backend"
authors = [{ name = "Joao Merlin", email = "loldinis@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
]
keywords = ["parser", "text", "chunk", "rust", "performance"]

[tool.maturin]
# The name of the generated python package
python-source = "."
# The name of the module containing the extension
module-name = "crabparser.crabparser_rust"
features = ["pyo3/extension-module"]